<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.neu.madcourse.numad20f_yang_ylescupidez.ui.search.SearchFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="edu.neu.madcourse.numad20f_yang_ylescupidez.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.neu.madcourse.numad20f_yang_ylescupidez.ui.achievements.AchievementsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_achievements" />
    <fragment
        android:id="@+id/navigation_createRecipe"
        android:name="edu.neu.madcourse.numad20f_yang_ylescupidez.ui.recipes.createRecipe.CreateRecipeFragment"
        android:label="Create Recipe"
        tools:layout="@layout/fragment_create_recipe" />



</navigation>