<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/medal_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:contentDescription="@string/medal_icon_description" />

        <TextView
            android:id="@+id/achievement_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/medal_icon"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/achievement_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/achievement_title"
            android:layout_toEndOf="@+id/medal_icon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:id="@+id/achievement_description"
            android:text="@string/achievement_description" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>